test/functional/failtests/lambdas/decl.void.txt
TypeError: Inferred type does not expect a return value from lambda function
3 | func main() {
4 |     func<>:x = (): 123;
  |                ^ (4:16)
5 | }

